--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form>
+    <form action="hello">
     <input type='text' name='name'>
     <input type='submit' value= 'Greet Me!'>
     </form>
